Finished the afternoon lab!

--- a/index.html
+++ b/index.html
@@ -74,47 +74,55 @@
             </div>
         </div>
     </section>
-    <!-- <section id="second-container">
-        <h3>RECENT LAUNCH</h3>
-        <h1>CRS-21 MISSION</h1>
-        <div class="button">
-            <p class="nav-text">WATCH</p>
-        </div>
+    <section id="second-container">
+        <div id="second-container-main">
+            <h3>RECENT LAUNCH</h3>
+            <h1>CRS-21 MISSION</h1>
+            <div class="button">
+                <p class="nav-text">WATCH</p>
+            </div>
+        </div>    
     </section>
     <section id="third-container">
-        <h1>CREW-1 MISSION</h1>
-        <h6>Watch the Crew-1 mission from the beginning.</h6>
-        <div class="button">
-            <p class="nav-text">LEARN MORE</p>
-        </div>
+        <div id="third-container-main">
+            <h1>CREW-1 MISSION</h1>
+            <h6>Watch the Crew-1 mission from the beginning.</h6>
+            <div class="button-learn-more">
+                <p class="nav-text">LEARN MORE</p>
+            </div>
+        </div>    
     </section>
     <section id="fourth-container">
-        <h1>DRAGON DOCKING</h1>
-        <h1>SIMULATOR</h1>
-        <h6>Dragon is designed to autonomously dock and undock with the International Space Station. However, the crew can take manual control of the spacecraft if necessary.</h6>
-        <div class="button">
-            <p class="nav-text">TRY NOW</p>
+        <div id="fourth-container-main">
+            <h1>DRAGON DOCKING<br>SIMULATOR</h1>
+            <h6>Dragon is designed to autonomously dock and undock with the International<br>Space Station. However, the crew can take manual control of the spacecraft if<br>necessary.</h6>
+            <div id="button-try-now">
+                <p class="nav-text">TRY NOW</p>
+            </div>
         </div>
     </section>
     <section id="fifth-container">
-        <h1>STARSHIP</h1>
-        <h6>SpaceX vehicle Starship is SpaceX's fully reusable transportation system designed to carry both crew and cargo to the Earth's orbit, the Moon, Mars, and beyond.</h6>
-        <div class="button">
-            <p class="nav-text">LEARN MORE</p>
+        <div id="fifth-container-main">
+            <h1>STARSHIP</h1>
+            <h6>SpaceX vehicle Starship is SpaceX's fully reusable transportation system<br>designed to carry both crew and cargo to the Earth's orbit, the Moon, Mars, and<br>beyond.</h6>
+            <div class="button-learn-more">
+                <p class="nav-text">LEARN MORE</p>
+            </div>
         </div>
     </section>
     <section id="sixth-container">
-        <h3>05/01/20</h3>
-        <h1>NASA SELECTS LUNAR</h1>
-        <h1>OPTIMIZED STARSHIP</h1>
-        <h6>NASA selected SpaceX to develop a lunar optimized Starship to transport crew between lunar orbit and the surface of the Moon as part of NASA's Artemis program.</h6>
-        <div class="button">
-            <p class="nav-text">LEARN MORE</p>
+        <div id="sixth-container-main">
+            <h3>05/01/20</h3>
+            <h1>NASA SELECTS LUNAR<br>OPTIMIZED STARSHIP</h1>
+            <h6>NASA selected SpaceX to develop a lunar optimized Starship to transport<br>crew between lunar orbit and the surface of the Moon as part of NASA's<br>Artemis program.</h6>
+            <div class="button-learn-more">
+                <p class="nav-text">LEARN MORE</p>
+            </div>
         </div>
     </section>
     <footer>
-        <p>SPACEX © 2020</p>
         <nav id="footer-links">
+            <span id="footer-text-copyright">SPACEX © 2020</span>
             <span class="footer-text">TWITTER</span>
             <span class="footer-text">YOUTUBE</span>
             <span class="footer-text">INSTAGRAM</span>
@@ -122,7 +130,7 @@
             <span class="footer-text">LINKEDIN</span>
             <span class="footer-text">PRIVACY POLICY</span>
         </nav>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
